--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "clsx": "^2.1.1",
     "fabric": "^6.9.0",
     "lucide-react": "^0.548.0",
-    "next": "16.0.0",
+    "next": "^16.1.1",
     "next-themes": "^0.4.6",
-    "react": "19.2.0",
+    "react": "19.2.1",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.3.1",
